# starfield-rus-localization

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: add-translation.md  build-mod.md  lint-and-test.md  onboarding.md  publish-to-creations.md  transliterate-mod.md
.claude/commands/: full-validate.md  publish-check.md  transliterate-workflow.md
.codex/: AGENTS.md
.github/workflows/: build.yml  release.yml  validate.yml
docs/: ARCHITECTURE.md  DOR_DOD.md  PUBLISH_CREATIONS.md  PUBLISH_NEXUS.md  TRANSLIT_RELEASE_PLAYBOOK.md  WORKFLOW.md
docs/playbooks/: build-from-original-files.md  build-from-ru.md  package-and-validate.md  translit-standard-fonts.md  transliterate-strings-only.md
src/interface/: fontconfig_en.txt  translate_en.txt
tools/ba2-packer/: Cargo.toml
tools/ba2-packer/src/: create_esm.rs  extract.rs  main.rs  pack.rs  rename.rs  repack.rs  smoke_test.rs  string_table.rs  transliterate.rs  validate.rs
tools/ba2-packer/tests/: cli.rs
